--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link ref="stylesheet" href="..//first-project/style.css">
+    <title>First-project</title>
+    <link ref="stylesheet" href="../first-project/style.css">
 </head>
 <body>
     <header class="header">
-        Введение
+        <h1>Привет как твои дела</h1>
+            <p> что будем делать сегодня?</p>
     </header>
 </body>
 </html>
